--- a/filas/index.html
+++ b/filas/index.html
@@ -10,10 +10,13 @@
         }
         .container {
             display: grid;
-            grid-template-columns: 25% 50% 25%;
+            /* grid-template-columns: 25% 50% 25%;
+            grid-template-rows: 300px 300px ; */
+            /* grid-template: filas/columans; */
+            grid-template: 300px 150px 100px / 50% 200px 100px;
         }
         .item {
-            background-color: aqua;
+            background-color: pink;
             border: 1px solid red ;
             padding: 1em;
         }
